src/objects/CTC_Event__e.object
<CustomObject>
    <fields>
        <fullName>Data__c</fullName>
        <label>Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>CTC Event</label>
    <pluralLabel>CTC Events</pluralLabel>
</CustomObject>